Corrected issue with media-object and spacing in priority-box in footprint.

--- a/src/scss/modules/_icon-button.scss
+++ b/src/scss/modules/_icon-button.scss
@@ -81,6 +81,11 @@
         }
     }
 
+    &.is-disabled {
+        opacity: 0.13;
+        cursor: default;
+    }
+
     &:active {
         &:after {
             background: rgba($black, .09);
